# research-track-jupyter

./: README.md
robot_control_final_assignment/: CMakeLists.txt  Final Assignment UI.ipynb  package.xml  package.xml.save
robot_control_final_assignment/.ipynb_checkpoints/: Final Assignment UI-checkpoint.ipynb
robot_control_final_assignment/launch/: robot.launch  robot_launch.xml  sim.launch
robot_control_final_assignment/src/: angle_filter_node.cpp  control_node.cpp  move_base_position_node.cpp  ui_node.cpp
robot_control_final_assignment/srv/: Mode.srv
